nova_tests/plan114/neg/plan114_4_const_refers_non_const_neg.nv
// Plan 114.4 Ф.1 NEG: const X = ref на unknown / non-const — error.

// EXPECT_COMPILE_ERROR E_CONST_REFERS_NON_CONSTEXPR

module neg.plan114_4_const_refers_non_const_neg

const BAD int = unknown_binding
